Add Wallarm tooltips

--- a/code/dev/parts/domains/domain-wallarm-waf/modals/confirm-duplicate-wallarm-location.tpl.html
+++ b/code/dev/parts/domains/domain-wallarm-waf/modals/confirm-duplicate-wallarm-location.tpl.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
   <form class="form-horizontal" name="duplicateForm">
     <div class="form-group">
-      <label class="col-sm-12"> Please enter new Location Name for duplicate
+      <label class="col-sm-12"> Please enter a new location name to create a duplicate of
         <strong ng-if="!!model.location"> {{model.location}}</strong>:</label>
     </div>
     <div class="form-group" ng-class="{ 'has-error': duplicateForm.wallarmLocation.$invalid && duplicateForm.wallarmLocation.$dirty }">
