--- a/code/dev/parts/domains/domain-wallarm-waf/domain-wallarm-waf.tpl.html
+++ b/code/dev/parts/domains/domain-wallarm-waf/domain-wallarm-waf.tpl.html
@@ -87,7 +87,7 @@
               <select name="operationMode" id="operationMode" class="form-control" ng-disabled="_loading" ng-model="item.wallarm_mode"
                 ng-options="mode as key for (mode,key) in $ctrl.wallarmOperationModeSelectList" required>
               </select>
-              <label for="operationMode" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The option defines how Wallarm WAF will behave for the location: the Off mode will disable Wallarm service for the location, the Monitoring mode will enable the WAF to collect traffic analytics but will not actually block detected security threats, and the Block mode actually block detected malicious events.">
+              <label for="operationMode" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The option defines how Wallarm WAF will behave for the location: the Off mode will disable Wallarm service for the location, the Monitoring mode will enable the WAF to collect traffic analytics but will not actually block detected security threats, and the Block mode actually block detected malicious events. In Aggressive mode all non-standard requests are blocked (for example, mapping a string in the field usually used for passing a number) - use this mode with extreme caution.">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="wallarmsEditForm.operationMode.$error" role="alert" ng-messages-multiple>
@@ -155,7 +155,7 @@
             <div class="col-md-9">
               <input type="number" id="unpack_response" name="unpackResponse" class="form-control inline-block" ng-disabled="_loading || _isEditLocked"
                 ng-model="item.wallarm_process_time_limit" ng-min="1" ng-max="1000" required> millisecond(s)
-              <label for="unpackResponse" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+              <label for="unpackResponse" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The parameter sets the time limit of a single request processing in milliseconds. If the time exceeds the limit the request is handled in accordance with the value of the next configuration field (Action On Reaching Of Request Processing Time Limit).">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="wallarmsEditForm.unpackResponse.$error" role="alert" ng-messages-multiple>
@@ -171,7 +171,7 @@
                 ng-options="mode as key for (mode,key) in $ctrl.wallarmProcessTimeLimitBlockList">
               </select>
               <label for="wallarmProcessTimeLimitBlock" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
-                uib-popover="TODO text">
+                uib-popover="The field controls how to handle requests which exceeded the processing time limit set in Request Processing Time Limit field above. In Always Block mode the requests are always blocked, in Always Allow mode the requests are always ignored (allowed to pass). The behaviour of Attack mode depends on the attack blocking mode set in Operation Mode directive above: if it is set to Monitoring the requests are ignored, if it is set to Block or Aggresive then the requests are blocked.">
                 <i class="fa fa-question-circle"></i>
               </label>
             </div>
