--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -797,7 +797,7 @@
               <hr>
             </uib-tab>
             <!-- Wallarm WAF-->
-            <uib-tab index="6" id="domainTabWallarmWAF"  active="active[6]" select="selectTab(6)" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Wallarm's AI-driven WAF is integrated into the platform, and this tab provides necessary controls to manage the security service for the domain">
+            <uib-tab index="6" id="domainTabWallarmWAF"  active="active[6]" select="selectTab(6)" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Wallarm's AI-driven WAF is integrated into the platform, and this tab provides necessary controls to manage Wallarm WAF service for the domain">
                 <uib-tab-heading>Wallarm WAF
                   <i class="label label-primary pull-right fa beta-functional" aria-hidden="true"> Beta</i>
                 </uib-tab-heading>
