More fixes for Wallarm tooltips

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -807,7 +807,7 @@
                       <toggle-switch id="enable_wallarm" name="enableWallarmWAF" is-disabled="_loading || _isEditLocked" ng-model="model.rev_component_bp.enable_wallarm"
                         on-label="On" off-label="Off">
                       </toggle-switch>
-                      <label for="enableWallarmWAF" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the switch the control whether Wallarm WAF will be enabled for the domain. Please contract the support team to provide required configuration parameters.">
+                      <label for="enableWallarmWAF" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the switch the control whether Wallarm WAF will be enabled for the domain. Please contact the support team to get required Wallarm configuration parameters.">
                         <i class="fa fa-question-circle"></i>
                       </label>
                     </div>
