Image Optimization changed to ImageEngine and jasmine reported prefix changed

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -874,7 +874,7 @@
               <hr>
             </uib-tab>
             <!-- ImageEngine-->
-            <uib-tab index="11" id="domainTabImageOptimization" active="active[11]" select="selectTab(11)" heading="Image Optimization" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The Image Optimization feature provides a simple, automatic and transparent way to resize served images depending on maximum screen resolution of end user devices">
+            <uib-tab index="11" id="domainTabImageOptimization" active="active[11]" select="selectTab(11)" heading="ImageEngine" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The ImageEngine feature provides a simple, automatic and transparent way to resize served images depending on maximum screen resolution of end user devices">
               <div ng-include="'parts/domains/domain-image-engine/domain-image-engine.tpl.html'" class="form-group"></div>
               <hr>
             </uib-tab>
