--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -113,7 +113,7 @@
             <i class="sub-menu-icon fa fa-hdd-o"></i> Edge Cache
           </a>
         <a ui-sref-active="active" ui-sref="index.reports.imageengine-analytics" class="side-menu-sub-item">
-            <i class="sub-menu-icon fa fa-picture-o" aria-hidden="true"></i> Image Optimization
+            <i class="sub-menu-icon fa fa-picture-o" aria-hidden="true"></i> ImageEngine
           </a>
       </li>
       <!--Security Analytics -->
