--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -31,7 +31,7 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Disabling the Image Optimization feature will also automatically disable the Custom VCL Code feature. Do you want to proceed?
+    Disabling the ImageEngine feature will also automatically disable the Custom VCL Code feature. Do you want to proceed?
   </div>
   </div>
   <div class="modal-footer">
@@ -44,9 +44,9 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Image Optimization feature should be enabled only for web domains serving image objects. Non-image objects (like HTML pages,
-    JavaScript/CSS files, etc) requested from Image Optimization-enabled domain will be rejected with HTTP error code 412
-    (Precondition Failed). Before enabling Image Optimization feature for the domain please make sure that it will be used
+    ImageEngine feature should be enabled only for web domains serving image objects. Non-image objects (like HTML pages,
+    JavaScript/CSS files, etc) requested from ImageEngine-enabled domain will be rejected with HTTP error code 412
+    (Precondition Failed). Before enabling ImageEngine feature for the domain please make sure that it will be used
     only to serve image objects (PNG/JPG/GIF/WEBP/BMP).
   </div>
   </div>
