--- a/code/dev/parts/reports/usage-web/usage-web__dns_service.tpl.html
+++ b/code/dev/parts/reports/usage-web/usage-web__dns_service.tpl.html
@@ -5,19 +5,19 @@
   <div class="form-group">
     <label class="col-sm-6 control-label">Total DNS Zones</label>
     <div class="col-sm-6">
-      <div class="form-control text-right">{{report.dns_zones.total_dns_zones}}</div>
+      <div class="form-control text-right" id="totalDNSZones">{{report.dns_zones.total_dns_zones}}</div>
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-6 control-label">Total DNS Records</label>
     <div class="col-sm-6">
-      <div class="form-control text-right">{{ report.dns_zones.total_dns_records }}</div>
+      <div class="form-control text-right" id="totalDNSRecords">{{ report.dns_zones.total_dns_records }}</div>
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-6 control-label">Total DNS Queries</label>
     <div class="col-sm-6">
-      <div class="form-control text-right">{{ report.dns_zones.total_dns_queries }}</div>
+      <div class="form-control text-right" id="totalDNSQueries">{{ report.dns_zones.total_dns_queries }}</div>
     </div>
   </div>
 
