--- a/code/dev/parts/reports/usage-web/usage-web__log_shipping_jobs.tpl.html
+++ b/code/dev/parts/reports/usage-web/usage-web__log_shipping_jobs.tpl.html
@@ -4,7 +4,7 @@
   <div class="form-group">
     <label class="col-sm-6 control-label">Total</label>
     <div class="col-sm-6">
-      <div class="form-control text-right">{{ report.total_log_shipping_jobs }}</div>
+      <div id="totalLogShippingJobs" class="form-control text-right">{{ report.total_log_shipping_jobs }}</div>
     </div>
   </div>
 </form>
