--- a/code/dev/parts/reports/usage-web/usage-web__ssl_certs.tpl.html
+++ b/code/dev/parts/reports/usage-web/usage-web__ssl_certs.tpl.html
@@ -4,14 +4,14 @@
   <div class="form-group">
     <label class="col-sm-6 control-label">Active</label>
     <div class="col-sm-6">
-      <div class="form-control text-right">{{ report.ssl_certs.active }}</div>
+      <div id="activeSSLCerts" class="form-control text-right">{{ report.ssl_certs.active }}</div>
     </div>
   </div>
 
   <div class="form-group">
     <label class="col-sm-6 control-label">Deleted</label>
     <div class="col-sm-6">
-      <div class="form-control text-right">{{ report.ssl_certs.deleted }}</div>
+      <div id="deletedSSLCerts" class="form-control text-right">{{ report.ssl_certs.deleted }}</div>
     </div>
   </div>
 
