--- a/code/dev/parts/reports/usage-web/usage-web__ssl_names.tpl.html
+++ b/code/dev/parts/reports/usage-web/usage-web__ssl_names.tpl.html
@@ -6,7 +6,7 @@
   <div class="form-group">
     <label class="col-sm-6 control-label">Total</label>
     <div class="col-sm-6">
-      <div class="form-control text-right">{{ report.total_ssl_names }}</div>
+      <div id="totalSSLNames" class="form-control text-right">{{ report.total_ssl_names }}</div>
     </div>
   </div>
 
