--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -259,7 +259,7 @@
     </ul>
   </div>
 </section>
-<div id="main" class="left-panel" ng-style="{{'left': isHide ? '0px' :'210px'}">
+<div id="main" class="left-panel" ng-style="{'left': isHide ? '0px' :'210px'}">
   <section main>
     <div class="paper-container">
       <div class="paper-header">
