Temporary commented “Last 30 Days” time period from all graphs in “Web Analytics” section

--- a/code/dev/parts/reports/charts/fbt-average.html
+++ b/code/dev/parts/reports/charts/fbt-average.html
@@ -13,7 +13,7 @@
                 ng-model="filters.count_last_day">
           <option value="1">Last 1 Day</option>
           <option value="7">Last 7 Days</option>
-          <option value="30">Last 30 Days</option>
+          <!-- <option value="30">Last 30 Days</option> // TODO: temporary commented 30 days -->
         </select>
       </div>
 
