--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -244,6 +244,7 @@
   <script type="text/javascript" src="js/portal/resources/model/azureSubscriptions.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/vendors.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/waf_rules.factory.js"></script>
+  <script type="text/javascript" src="js/portal/resources/model/invitation.factory.js"></script>
 
   <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
   <script type="text/javascript" src="js/portal/auth/auth.config.js"></script>
@@ -570,6 +571,11 @@
   <script type="text/javascript" src="js/portal/notifications/account-notification-lists/accountNotificationLists.directive.js"></script>
   <script type="text/javascript" src="js/portal/notifications/notification-list/notificationList.directive.js"></script>
   <!-- // Notification Lists -->
+  <!-- Invitation  -->
+  <script type="text/javascript" src="js/portal/invitation/invitation.module.js"></script>
+  <script type="text/javascript" src="js/portal/invitation/invitation.routes.js"></script>
+  <script type="text/javascript" src="js/portal/invitation/controller/invitation.controller.js"></script>
+  <!-- // Invitation -->
   <script type="text/javascript" src="js/portal/app.module.js"></script>
   <script type="text/javascript" src="js/portal/app.config.js"></script>
   <script type="text/javascript" src="js/portal/app.routes.js"></script>
