--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -175,8 +175,8 @@
               </div>
             </div>
           </div>
-          <hr>
-          <div class="form-group" ng-class="{'has-error': createForm.password.$invalid && createForm.password.$dirty}">
+          <!-- passwords commented out because of invitation system -->
+          <!-- <div class="form-group" ng-class="{'has-error': createForm.password.$invalid && createForm.password.$dirty}">
             <label for="password" class="col-sm-2 control-label">Password *</label>
             <div class="col-sm-10">
               <input type="password" class="form-control inline-block" id="password" name="password" ng-model="model.password" ng-disabled="_loading" ng-minlength="8"  ng-maxlength="15" required>
@@ -201,8 +201,7 @@
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
-          </div>
-          <hr>
+          </div> -->
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label">Comment</label>
             <div class="col-sm-10">
