--- a/code/dev/parts/invitation/createPassword.html
+++ b/code/dev/parts/invitation/createPassword.html
@@ -1,11 +1,15 @@
-<section id="main" class="password-creation-section" style="display: block;" ng-style="randomImageStyle">
+<section id="main" class="password-creation-section" style="display: block;">
   <div class="main_img_container">
-
     <div class="password_box">
       <div id="logo" class="logo block-center">
         <a ng-href="{{vendorConfig.companyWebsiteURL}}" class="logo--link" target="_blank">
           <img ng-src="images/{{vendor}}/logo.png" alt="Logo">
         </a>
+      </div>
+      <div id="content">
+        <p>
+          Please choose a password to complete the invitation process.
+        </p>
       </div>
       <form novalidate class="login_form block-center" name="loginForm" ng-submit="createPassword(loginForm)">
         <div class="block-center">
@@ -20,6 +24,9 @@
             <div class="form-group">
               <input type="password" name="passAgain" placeholder="Repeat Password" class="form-control input-lg" ng-disabled="_loading"
                 ng-model="passAgain" required>
+                <div class="error-messages" ng-messages="loginForm.passAgain.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
             </div>
             <div class="form-group">
               <button ng-disabled="_loading || disableSubmit(loginForm)" type="submit" class="btn btn-primary btn-lg btn-block signin" ng-class="">
