User resend invite function and invitation background images are random

--- a/code/dev/parts/invitation/createPassword.html
+++ b/code/dev/parts/invitation/createPassword.html
@@ -1,4 +1,4 @@
-<section id="main" class="password-creation-section" style="display: block;">
+<section id="main" class="password-creation-section" style="display: block;" ng-style="randomImageStyle">
   <div class="main_img_container">
     <div class="password_box">
       <div id="logo" class="logo block-center">
