Groups factory added

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -245,6 +245,7 @@
   <script type="text/javascript" src="js/portal/resources/model/vendors.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/waf_rules.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/invitation.factory.js"></script>
+  <script type="text/javascript" src="js/portal/resources/model/groups.factory.js"></script>
 
   <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
   <script type="text/javascript" src="js/portal/auth/auth.config.js"></script>
