Added group routes, templates and controller

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -288,6 +288,10 @@
 
   <script type="text/javascript" src="js/portal/users/controller/users.controller.js"></script>
 
+  <script type="text/javascript" src="js/portal/groups/groups.module.js"></script>
+  <script type="text/javascript" src="js/portal/groups/groups.routes.js"></script>
+  <script type="text/javascript" src="js/portal/groups/controller/groups.controller.js"></script>
+
   <script type="text/javascript" src="js/portal/apps/apps.module.js"></script>
   <script type="text/javascript" src="js/portal/apps/apps.routes.js"></script>
   <script type="text/javascript" src="js/portal/apps/controller/apps.controller.js"></script>
