--- a/code/dev/parts/groups/list.html
+++ b/code/dev/parts/groups/list.html
@@ -60,13 +60,17 @@
                     <span class="sortorder" ng-show="filter.predicate === 'groupname'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
                   <th>
-                    <a href="" ng-click="order('groupcount')">Users in group</a>
+                    <a href="" ng-click="order('groupcount')">Users In Group</a>
                     <span class="sortorder" ng-show="filter.predicate === 'groupcount'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
                   <th>
                     <a href="" ng-click="order('updated_at')">Last Update</a>
                     <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
+                  <th>
+                      <a href="" ng-click="order('updated_at')">Updated By</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                   <th>Actions</th>
                   <th class="account" ng-if="auth.isReseller() || auth.isRevadmin()">
                     <a href="" ng-click="order('account_id')">Account</a>
@@ -77,16 +81,19 @@
               <tbody>
                 <tr ng-repeat="Group in filteredRecords | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
                   <td>
-                    <a ui-sref=".edit({id: Group.group_id})" ng-if="!item.loading" uib-tooltip="Edit Group Profile">
+                    <a ui-sref=".edit({id: Group.id})" ng-if="!item.loading" uib-tooltip="Edit Group Profile">
                       {{Group.name}}
                     </a>
                   </td>
-                  <td>
-                    {{Group.userCount}}
+                  <td style="overflow-x: auto;">
+                    <span ng-repeat="user in Group.users">{{user}}{{ Group.users.indexOf(user) === Group.users.length - 1 ? null : ', '}}</span>
                   </td>
                   <td>{{ getRelativeDate(Group.updated_at) }}</td>
+                  <td>
+                      {{Group.updated_by}}
+                  </td>
                   <td class="actions">
-                    <a ui-sref=".edit({id: Group.group_id})" uib-tooltip="Edit Group Profile">
+                    <a ui-sref=".edit({id: Group.id})" uib-tooltip="Edit Group Profile">
                       <i class="glyphicon glyphicon-pencil"></i>
                     </a>
                     <a href="" ng-click="deleteGroup(Group)" ng-class="{'disabled':isReadOnly()}" uib-tooltip="Delete Group">
