--- a/code/dev/parts/users/editNew.html
+++ b/code/dev/parts/users/editNew.html
@@ -69,10 +69,10 @@
             </div>
           </div>
           <div class="form-group" ng-if="auth.isRevadmin()" ng-init="setGroups()" ng-class="{'has-error': editForm.group.$invalid && editForm.group.$dirty}">
-              <label for="group" class="col-sm-2 control-label">Group *</label>
+              <label for="group" class="col-sm-2 control-label">Group</label>
               <div class="col-sm-10">
                   <select class="form-control inline-block" id="group" name="group" ng-model="model.group" required>
-                      <option value="null" selected="selected">--- Select Group ---</option>
+                      <option value="null" selected="selected">--- No Group Selected ---</option>
                       <option ng-repeat="group in groups" value="{{group.id}}">{{group.name}}</option>
                     </select>
                 <label for="group" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select here the user's permissions group">
