--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -178,6 +178,7 @@
   <script type="text/javascript" src="js/portal/shared/directives/time-note-display.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/directives/typeahead.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/directives/focus-me.directive.js"></script>
+
   <script type="text/javascript" src="js/portal/shared/filter-activity-log/filterActivityLog.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/filter-activity-log/filterActivityLogDaterangepicker.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/filter-activity-log/activityTargetSelect.directive.js"></script>
@@ -246,6 +247,9 @@
   <script type="text/javascript" src="js/portal/resources/model/waf_rules.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/invitation.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/groups.factory.js"></script>
+
+  <script type="text/javascript" src="js/portal/shared/permissions/permissions.directive.js"></script>
+  <script type="text/javascript" src="js/portal/shared/permissions/permissions.controller.js"></script>
 
   <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
   <script type="text/javascript" src="js/portal/auth/auth.config.js"></script>
