--- a/code/dev/parts/users/editNew.html
+++ b/code/dev/parts/users/editNew.html
@@ -150,44 +150,7 @@
             </div>
           </div>
           <hr>
-          <div class="form-group">
-            <label for="access_control_list" class="col-sm-2 control-label">Access Control List</label>
-            <div class="col-sm-10">
-
-<!--
-              <div>
-                <input type="checkbox" name="access_control_list_dashBoard" class="inline-block" disabled ng-model="model.access_control_list.dashBoard"> Dashboard
-                <label for="access_control_list_dashBoard" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="TODO text Set here the new user's access control permissions">
-                  <i class="fa fa-question-circle"></i>
-                </label>
-              </div>
-              <div>
-                <input type="checkbox" name="access_control_list_reports" class="inline-block" ng-model="model.access_control_list.reports"> Reports
-                <label for="access_control_list_reports" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="TODO text">
-                  <i class="fa fa-question-circle"></i>
-                </label>
-              </div>
-              <div>
-                <input type="checkbox" name="access_control_list_configure" class="inline-block" ng-model="model.access_control_list.configure"> Configure
-                <label for="access_control_list_configure" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="TODO text">
-                  <i class="fa fa-question-circle"></i>
-                </label>
-              </div>
-              <div>
-                <input type="checkbox" name="access_control_list_test" class="inline-block" ng-model="model.access_control_list.test"> Test
-                <label for="access_control_list_test" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="TODO text">
-                  <i class="fa fa-question-circle"></i>
-                </label>
-              </div>
--->
-              <div>
-                <input type="checkbox" name="access_control_list_readOnly" class="inline-block" ng-model="model.access_control_list.readOnly"> Read Only
-                <label for="access_control_list_readOnly" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Enables read-only access for the user account (the user still can change his password, enabled/disable 2FA and manage dashboards)">
-                  <i class="fa fa-question-circle"></i>
-                </label>
-              </div>
-            </div>
-          </div>
+          <permissions ng-controller="PermissionsController" type="user"></permissions>
           <hr>
           <div class="row">
             <div class="col-sm-2 margin-sm-top-bottom">
